# meow-dev

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLEANUP_FINAL.md  DESIGN.md  README.md  READY_TO_COMMIT.md  cli.example.py  cli.py  main.py  pyproject.toml  service.py
docs/: API_USAGE.md
scripts/: quick_start_postgres.sh  setup_postgres_simple.sh
src/meow_agent/: __init__.py  config.py  event_bus.py  main.py  models.py
src/meow_agent/agents/: __init__.py  main_agent.py  memu_bot.py
src/meow_agent/core/: __init__.py  config.py  models.py
src/meow_agent/memu/: __init__.py  client.py  local_store.py
src/meow_agent/service/: __init__.py  dependencies.py  main.py
src/meow_agent/service/models/: __init__.py  schemas.py
src/meow_agent/service/routes/: __init__.py  config.py  health.py  memory.py
tests/: __init__.py  test_basic.py  test_memu.py  test_postgres.py
