[project]
name = "meow-agent"
version = "0.1.0"
description = "MemU-Powered Interactive Agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "memu-py>=1.4.0",
    "openai>=2.24.0",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
]

[project.scripts]
meow-agent = "meow_agent.main:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/meow_agent"]

[tool.uv]
package = true
