[project]
name = "meow-agent"
version = "1.1.0"
description = "MemU-Powered Interactive Agent with Dynamic Configuration"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "memu-py>=1.4.0",
    "openai>=2.24.0",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "requests>=2.31.0",
    "prompt-toolkit>=3.0.43",
]

[project.scripts]
memu-service = "meow_agent.service.main:run"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/meow_agent"]

[tool.uv]
package = true
